infra/post-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      nodePort: 31111
      port: 4000
      targetPort: 4000
    - name: event-bus
      protocol: TCP
      nodePort: 31112
      port: 4005
      targetPort: 4005
