infra/post.yaml
apiVersion: apps/v1
kind : Deployment
metadata: 
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template: 
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: devshahriar/posts:latest
          env:
            - name: jwt_key
              valueFrom:
                secretKeyRef: 
                  name: jwt-secret
                  key: jwt_key           
---
apiVersion: v1
kind: Service
metadata:
  name: posts-cluster-ip
spec:
  selector:
    app: posts
  ports:
  - name: posts
    protocol: TCP
    port: 4000
    targetPort: 4000
